--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ circle {
   }
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 
 var width = Math.max(960, innerWidth),
